force-app/main/default/objects/Iteration__c/Iteration__c.object-meta.xml
<CustomObject>
    <description>Iterations of sprint or prototype efforts</description>
    <label>Iteration</label>
    <nameField>
        <label>Iteration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iterations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>