force-app/main/default/objects/Iteration__c/fields/Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Status__c</fullName>
    <formula>IF( Total_Resource_Capacity_Hours__c - Capacity_in_Hours__c  &lt; 0, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( Total_Resource_Capacity_Hours__c - Capacity_in_Hours__c = 0,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Status</label>
    <type>Text</type>
</CustomField>