force-app/main/default/objects/Iteration__c/fields/Iteration_Type__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Type__c</fullName>
    <label>Iteration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Configuration Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>