force-app/main/default/objects/Iteration__c/fields/Number_of_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Working_Days__c</fullName>
    <inlineHelpText>Total number of available (non-holiday) working days</inlineHelpText>
    <label>Number of Working Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>