force-app/main/default/objects/Iteration__c/fields/Total_Resource_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Resource_Capacity_Hours__c</fullName>
    <label>Total Resource Capacity (Hours)</label>
    <summarizedField>Resource__c.Capacity_Hours__c</summarizedField>
    <summaryForeignKey>Resource__c.Iteration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>