force-app/main/default/objects/Iteration__c/fields/Total_Resource_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Resource_Working_Days__c</fullName>
    <label>Total Resource Working Days</label>
    <summarizedField>Resource__c.Available_Work_Days__c</summarizedField>
    <summaryForeignKey>Resource__c.Iteration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>