force-app/main/default/objects/Iteration__c/fields/Work_Day_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Day_Status__c</fullName>
    <formula>IF(  Total_Resource_Working_Days__c  -  Number_of_Working_Days__c  &lt; 0,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( Total_Resource_Working_Days__c  -  Number_of_Working_Days__c = 0,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Day Status</label>
    <type>Text</type>
</CustomField>