force-app/main/default/objects/Iteration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Iteration_Type__c</columns>
    <columns>Capacity_in_Hours__c</columns>
    <columns>Number_of_Working_Days__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>AllRWSPublicGroup</group>
    </sharedTo>
</ListView>